@@ -5815,3 +5815,6 @@ http/tests/cookies/third-party-cookie-relaxing.html
 # Needs double click support in DRT
 # See https://bugs.webkit.org/show_bug.cgi?id=35862
 fast/events/zoom-dblclick.html
+
+# For some reason crashes when run with all tests. Passes individually.
+fast/forms/multiple-form-submission-protection-mouse.html
