@@ -125,3 +125,6 @@ svg/custom/tiling-regular-hexagonal-crash.svg
 
 # Need to add functionality to DumpRenderTree to handle enable/disable Spatial Navigation
 fast/events/spatial-navigation
+
+# For some reason crashes when run with all tests. Passes individually.
+fast/forms/multiple-form-submission-protection-mouse.html
